2005-01-18  pierre <pierrebenz@users.sf.net>

	* added documentation guidelines (still incomplete)
	* added gnomesword-manual.xml + manual updates


2004-09-26  terry <terry470@users.sf.net>

	* gnomesword can be build using gtkmozembed for the Bible, commentary 
	  and dictionary panes.
	* added backend/gs_osishtmlhref.* and backend/gs_markupfiltmgr.* for 
	  gtkmozembed.
	* added main/embed.cc and main/embed.h for gtkmozembed.
	

2004-08-19  terry <terry470@users.sf.net>

	* removed files - backend/gs_thmlhtml.*, backend/gs_osishtmlhref.*,
	  backend/gs_gbfhtmlhref.* and backend/gs_markupfiltmgr.*
	* removed files - main/bibletext.*, main/commentary.*, main/dictlex.*
	  and main/percomm.*
	* replaced hint dialog with Information Viewer (moved the viewer 
	  from the sidebar notebook to it's own location at bottom of sidebar
	  but always visible)
	

2004-08-12  terry <terry470@users.sf.net>

	* bumped to 2.1.2
	* made gs cvs dependant on sword-1.5.8 (sword-cvs)
	

2004-08-10  terry <terry470@users.sf.net>

	* added shadows (borders) to most of the scroll windows can be turned 
	  off by setting settings.shadow_type=GTK_SHADOW_NONE (0) in 
	  main_window.c create_mainwindow(). Default=GTK_SHADOW_IN (1).

2004-08-07  terry <terry470@users.sf.net>

	* added doc patch from Jeff Ratliff - covers the sidebar search.
	
2004-01-14  Andy <andyp@users.sf.net>

	* added gnomesword.doap.rdf, the DOAP description for the project
	  currently used on the website and may gain wider usage in time, 
	  either way it is useful to have it maintained in CVS

2004-07-14  terry <tbiggs@users.sf.net>

	* fixed broken include in /backend/sword.cpp
	* bumped to 2.1.1 and released
	
	
2004-07-13  terry <tbiggs@users.sf.net>

	* bumped to 2.1.0 and released
	
	
2004-05-15  Pierre <pierrebenz@users.sf.net>

	* changed settings directory to .gnomesword-2.0
	
	
2004-05-15 Terry <tbiggs@users.sf.net>

	* removed backend/mgr.hh and backend/mgr.cc
	* removed backend/sword_defs.h
	
	