@@ -1,0 +1,29 @@
+<?xml version="1.0" standalone="no"?>
+<omf>
+  <resource>
+    <creator>
+     pierrebenz@users.sf.net
+    </creator>
+    <title>
+     GnomeSword Manual
+    </title>
+    <date>
+     2003-11-17
+    </date>
+    
+    <version identifier="1.0" date="2003-11-17" description="First Release"/>
+    
+    <subject category="GNOME|Applications"/>
+    <description>
+      User manual for the GnomeSword2 Bible study application.
+    </description>
+    <type>
+     user's guide
+    </type>
+    <format mime="text/xml" dtd="-//OASIS//DTD DocBook XML V4.1.2//EN"/>
+    <identifier url=""/>
+    <language code="C"/>
+    <relation seriesid="3376140e-2a26-11d8-9eab-83cf5b4f5f4e"/>
+    <rights type="GNU FDL" license.version="1.1" license="http://www.gnu.org/licenses/fdl.html" holder="Pierre Benz"/>
+  </resource>
+</omf>
