@@ -1,3 +1,6 @@
+2005-01-19  - documentation now builds to the new book format.
+              Translators please take note!
+	      	
 2005-01-18  - added book format to manual. updated NEWS in first time
 	    in a few years. 
 
